<resources>
    <string name="app_name">Level1</string>
    <string name="settingsTextView">Settings</string>
    <string name="textFirstLastName">Serhii Polishchuk</string>
    <string name="textCareer">Career</string>
    <string name="textHomeAddress">Home address</string>
    <string name="btnEditProfile">Edit profile</string>
    <string name="btnViewContact">VIEW my contacts</string>
    <string name="textView">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="e_mail">e-mail</string>
    <string name="user_email">polischuk.serhii@gmail.com</string>
    <string name="e_mail_text">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="_12345678">12345678</string>
    <string name="or">or</string>
    <string name="register">register</string>
    <string name="by_clicking_register_you_agree_to_our_terms">By clicking Register you agree to our Terms</string>
    <string name="and_conditions">and Conditions</string>
    <string name="error_user_name">Error user name!!!</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_is_register">This email is registered</string>
    <string name="need_register">You need to register.</string>
    <string name="pass_empty">Password cannot be empty!!!</string>
    <string name="pass_error">Error password!!!</string>
    <string name="google">Google</string>
    <string name="goo_logo">Goo_logo</string>
    <string name="vkbutton">vkButton</string>
</resources>