<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topContainerMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_margin"
        android:background="@color/background"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/settingsTextView"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_viewRadius250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="@dimen/image_size113"
                android:layout_height="@dimen/image_size113"
                android:scaleType="centerCrop"
                android:src="@drawable/ava" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textFirstLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/zero_margin"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/zero_margin"
            android:text="@string/textFirstLastName"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/textCareer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/zero_margin"
            android:layout_marginTop="@dimen/half_normal_indent"
            android:layout_marginEnd="@dimen/zero_margin"
            android:text="@string/textCareer"
            android:textColor="@color/gray_back"
            android:textSize="@dimen/normal_text_size14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFirstLastName" />

        <TextView
            android:id="@+id/textHomeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/half_normal_indent"
            android:layout_marginBottom="8dp"
            android:text="@string/textHomeAddress"
            android:textColor="@color/gray_back"
            android:textSize="@dimen/normal_text_size14"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCareer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomContainerMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_margin"
        android:background="@color/white"
        android:clickable="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/topContainerMain"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/fbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/alfaBack"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/inButton"
            app:layout_constraintEnd_toStartOf="@+id/inButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inButton"
            app:srcCompat="@drawable/fb_button" />

        <ImageButton
            android:id="@+id/inButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/alfaBack"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566"
            app:srcCompat="@drawable/in_button" />

        <ImageButton
            android:id="@+id/vkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/alfaBack"
            android:clickable="true"
            android:contentDescription="@string/vkbutton"
            app:layout_constraintBottom_toBottomOf="@+id/inButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inButton"
            app:layout_constraintTop_toTopOf="@+id/inButton"
            app:layout_constraintVertical_bias="0.504"
            app:srcCompat="@drawable/vk_button" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:backgroundTint="@color/white"
            android:text="@string/btnEditProfile"
            android:textAllCaps="false"
            android:textColor="@color/blue_gray"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnViewContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/stroke_width2" />

        <Button
            android:id="@+id/btnViewContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:backgroundTint="@color/orange"
            android:text="@string/btnViewContact"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>